----------
v6.1.5-git
----------

[mms] Improved error handling when creating a new flag in dynamic view.
[mms] Make addresses in smartmobile full message header display clickable to
      open a compose window.
[mms] Don't display empty containers in dynamic folder list (Request #11425).


------
v6.1.4
------

[mms] Fix auto-complete of addresses on the dynamic redirect page.
[mms] Fix updating flags in dynamic search view (Bug #12594).
[mms] Use Horde_Smtp to send messages via SMTP.
[mms] Fix applying the 'allow_folders' permission.
[mms] Fix canceling/discarding compose message in basic view (Bug #12555).
[mms] Fix updating message index when deleting a message in basic message view
      (Bug #12539).
[mms] 'trailer' hook now has the user's identity and the list of recipients
      passed as parameters.
[mms] Add ability to access all reply methods in smartmobile view.
[mms] Smarter sizing of popup windows in dynamic view.
[mms] Correctly save multipart/related data when saving compose message as a
      draft.
[mms] When checking for newmail in a mailbox, use the total number of recent
      messages seen at any time during the page access (Request #12447).
[mms] Workaround IE8's broken XMLHttpRequest when sending data in dynamic
      compose view (Bug #12474).


------
v6.1.3
------

[mms] Workaround Chrome bug preventing drag/drop of attachments in dynamic
      compose (Bug #12418).
[mms] Better handle transient mail server connection issues in basic and
      minimal views.
[mms] Fix regression of redirect message not working in dynamic view (Bug
      #12417).
[jan] Fix link to setup browser for mailto: protocol.
[mms] Fix uploading attachments on Firefox 22+ in dynamic view.
[mms] Fix image upload dialog in the HTML compose editor.
[mms] Fix purging search previews from browser cache when switching mailboxes
      (Bug #12384).
[mms] Fix parsing signed & encrypted S/MIME messages sent from Outlook
      2007/2010 (Bug #12374).